# course-prodml

./: README.md
module1/: random_forest_model.ipynb
module1/.ipynb_checkpoints/: random_forest_model-checkpoint.ipynb
module2/: README.md  model.py  preparation.py
module2/1_from_jupyter_to_application/: model_service.py
module2/2_dependency_management/: model_service.py  runner.py
module2/3_parametrization/: .env  collection.py  config.py  model.py  model_service.py  pyproject.toml  runner.py
module2/4_logging/: collection.py  config.py  model.py  model_service.py  preparation.py  pyproject.toml  rent_apartments.csv  runner.py
module2/5_database/: .env  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py
module2/7_clean_code/: setup.cfg
module2/8_linters_formatters/: pyproject.toml  setup.cfg
module3/1_from_monolith_to_microservices/: Makefile  pyproject.toml
module3/1_from_monolith_to_microservices/.github/actions/build-application/: action.yml
module3/1_from_monolith_to_microservices/src/: runner_builder.py  runner_inference.py
module3/1_from_monolith_to_microservices/src/config/: .env  __init__.py
module3/1_from_monolith_to_microservices/src/model/: model_builder.py  model_inference.py
module3/2_flask_introduction_developing_inference_api/: pyproject.toml
module3/2_flask_introduction_developing_inference_api/app/: run.py
module3/2_flask_introduction_developing_inference_api/app/config/: __init__.py
module3/2_flask_introduction_developing_inference_api/app/schema/: apartment.py
(+44 files in other folders)
