[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["5x12 <contact@awolf.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
wemake-python-styleguide = "0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
